# Agent-Skills-Harness

./: .gitignore  AGENTS.md  AGENT_LOG.md  CLAUDE.md  EVAL_LOOP.md  Makefile  README.md  WORKFLOWS.md  conftest.py  finalized-plan.md  gitignore  pyproject.toml
audit_server/: __init__.py  audit.py  server.py
audit_server/tools/: fingerprint.py
core/: __init__.py  checks.py  eval_api.py  probes.py  psi.py  render.py  schema.py  smoke.py
docs/: BRIEF.md  build-plan.md
eval/: __init__.py  config.py  score_model.py
eval/calibration/: __init__.py  ablations.py  calibrate.py  calibration_state.json  labels.json  test_calibration.py
eval/deterministic/: __init__.py  checks.py  test_citations.py  test_fabrication.py  test_structure.py
eval/fixtures/bundles/gingerpeople/: catalog.json  manifest.json  profile.json  technical.json
eval/fixtures/bundles/gingerpeople/content/: 01-pdp.md  02-cart.md
eval/fixtures/bundles/zenrojas/: catalog.json  manifest.json  profile.json  technical.json
eval/fixtures/bundles/zenrojas/content/: 00-homepage.md  01-pdp.md  02-collection.md  03-cart.md
eval/fixtures/reports/: _build_target_json.py  base_zenrojas.json  target_report.json
eval/judge/: __init__.py  fake.py  judge.py  rubrics.py  test_judge_smoke.py
eval/loop/: __init__.py  cascade.py  fake_writer.py  optimizer.py  run_loop.py  state.py  test_optimizer_gate.py  writer.py
eval/loop/runs/: run_demo.json
eval/redteam/: __init__.py  _build_cases.py  regression_corpus.jsonl  test_redteam.py
eval/redteam/cases/empty/: case.json  report.json
eval/redteam/cases/malformed/: case.json  report.json
eval/redteam/cases/malformed/bundle/: catalog.json
eval/redteam/cases/non_english/: case.json  report.json
eval/redteam/cases/non_english/bundle/: catalog.json
eval/redteam/cases/single_product/: case.json  report.json
eval/redteam/cases/single_product/bundle/: catalog.json
qosmic_audit_server/: __init__.py  audit.py  profile.py  record_bundles.py  server.py
qosmic_audit_server/tools/: __init__.py  catalog.py  crawl.py  score.py  technical.py
sample_output/gingerpeople/: report.html  report.json  report.md
sample_output/zenrojas/: report.html  report.json  report.md
skills/storefront-audit/: SKILL.md
skills/storefront-audit/references/: pillars.md  report-template.md  schema.md
tests/fixtures/: golden_report.json
tests/unit/: test_render.py  test_schema.py
(+2 files in other folders)
